# Progress-Bar

./: CMakeLists.txt  Disp.cpp  Disp.h  FileManage.cpp  FileManage.h  Grafica.cpp  Grafica.h  Observer.cpp  Observer.h  ProgressBar.cpp  ProgressBar.h  Risorse.cpp  Risorse.h  Subject.cpp  Subject.h  main.cpp
test/: CMakeLists.txt  FileManageTest.cpp  GraficaTest.cpp  RiorseTest.cpp  mainTest.cpp
